# sloop

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: feed.rs  main.rs  upload.rs
src/upload/tests/: s3_mock.rs
