[package]
name = "sloop"
version = "1.0.0"
authors = ["RobbieClarken <robbie.clarken@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Create an RSS feed from audiobook media files and upload to S3"
readme = "README.md"
documentation = "https://github.com/RobbieClarken/sloop"
homepage = "https://github.com/RobbieClarken/sloop"
repository = "https://github.com/RobbieClarken/sloop"
keywords = ["audiobook", "podcast", "rss"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.10"
chrono = "0.4"
md5 = "0.6"
percent-encoding = "2.1"
rss = "1.8"
rusoto_core = "0.41"
rusoto_s3 = "0.41"
serde_json = "1.0"
structopt = "0.3"

[dev-dependencies]
roxmltree = "0.7"
serde = { version = "1.0", features = ["derive"] }
